+ dockerignore + docker image scanning

--- a/.dockerignore
+++ b/.dockerignore
@@ -22,3 +22,11 @@ cmd/quiz/
 .github
 .idea
 .vscode
+./Dockerfile
+./Makefile
+./Buildfile
+./Procfile
+./build.sh
+docker-compose.*
+svc/example
+docs/
