--- a/svc/shows/repository/sqlc.yaml
+++ b/svc/shows/repository/sqlc.yaml
@@ -14,3 +14,8 @@ rename:
   id: "ID"
   guid: "GUID"
   url: "URL"
+overrides:
+  - go_type: "github.com/google/uuid.NullUUID"
+    db_type: "uuid"
+    nullable: true
+
