--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,5 +12,10 @@ services:
     ports:
       - 5432:5432
 
+  solana-test-validator:
+    image: scherbina/solana-test-validator
+    ports:
+      - 8899:8899
+
 volumes:
   database_data:
