--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: Go
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, quiz-v2, refactor-quiz-engine-v2 ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main, develop ]
+    branches: [ main, develop, quiz-v2, refactor-quiz-engine-v2 ]
 
 jobs:
 
