Added multiroom test (two rooms, two players)

--- a/Makefile.ci
+++ b/Makefile.ci
@@ -48,4 +48,4 @@ migrate-local: ## Run all migrations on local environment
 	DATABASE_URL=postgresql://pguser:pgpass@127.0.0.1/pgdb?sslmode=disable \
 	go run ./cmd/migrate/main.go
 test:
-	go test -count=1 ./internal/test/...
+	go test -p 1 -count=1 ./internal/test/...
