--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,12 @@ name: Go
 
 on:
   push:
-    branches: [ main, develop, quiz-v2, refactor-quiz-engine-v2 ]
+    branches: [quiz-v2, refactor-quiz-engine-v2]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main, develop, quiz-v2, refactor-quiz-engine-v2 ]
+    branches: [main, develop]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
