--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -12,11 +12,11 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [main]
+  # push:
+  #   branches: []
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [develop]
+    branches: [main, develop]
   schedule:
     - cron: "44 11 * * 4"
 
