--- a/Makefile.ci
+++ b/Makefile.ci
@@ -75,6 +75,12 @@ run-local: ## Run api via `go run`
 	NATS_URL=nats://127.0.0.1:4222 \
 	NATS_WS_URL=ws://127.0.0.1:8080 \
 	SERVER_RSA_PRIVATE_KEY="$$SERVER_RSA_PRIVATE_KEY" \
+	SOLANA_STAKE_POOL_ADDR=XXXXXXXXXX \
+	SOLANA_SYSTEM_PROGRAM=XXXXXXXXXX \
+	SOLANA_SYSVAR_RENT=XXXXXXXXXX \
+	SOLANA_SYSVAR_CLOCK=XXXXXXXXXX \
+	SOLANA_SPL_TOKEN=XXXXXXXXXX \
+	SOLANA_STAKE_PROGRAM_ID=XXXXXXXXXX \
 	go run -ldflags "-X main.buildTag=`date -u +%Y%m%d.%H%M%S`-$(LATEST_COMMIT)" -race cmd/api/main.go &
 migrate-local: ## Run all migrations on local environment
 	@rm -Rvf migrations/*.sql && \
