--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         run: make -f Makefile.ci up && sleep 10 && make -f Makefile.ci migrate-local run-local
 
       - name: Run e2e tests
-        run: make -f Makefile.ci test
+        run: sleep 10 && make -f Makefile.ci test
