--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: 1.17
 
+      - name: Compile source code
+        run: go build ./cmd/...
+
       - name: Set up application
         run: make -f Makefile.ci up && sleep 10 && make -f Makefile.ci migrate-local
 
