Integrate IAP with NFT marketplace

--- a/Makefile.ci
+++ b/Makefile.ci
@@ -90,6 +90,6 @@ migrate-local: ## Run all migrations on local environment
 	DATABASE_URL=postgresql://pguser:pgpass@127.0.0.1/pgdb?sslmode=disable \
 	go run ./cmd/migrate/main.go
 e2e-tests:
-	go test -p 1 -count=1 -race -tags=mock_postmark,mock_coingecko,mock_appstore ./test/e2e/... ./lib/... ./svc/...
+	go test -p 1 -count=1 -race -tags=mock_postmark,mock_coingecko,mock_appstore,mock_nft_marketplace ./test/e2e/... ./lib/... ./svc/...
 integration-tests:
-	go test -p 1 -count=1 -race -tags=mock_solana,mock_postmark,mock_appstore ./test/integration-tests/...
+	go test -p 1 -count=1 -race -tags=mock_solana,mock_postmark,mock_appstore,mock_nft_marketplace ./test/integration-tests/...
