--- a/Makefile.ci
+++ b/Makefile.ci
@@ -92,4 +92,4 @@ migrate-local: ## Run all migrations on local environment
 e2e-tests:
 	go test -p 1 -count=1 -race -tags=mock_postmark,mock_coingecko,mock_appstore,mock_nft_marketplace,mock_google_firebase ./test/e2e/... ./lib/... ./svc/...
 integration-tests:
-	go test -p 1 -count=1 -race -tags=mock_solana,mock_postmark,mock_appstore,mock_nft_marketplace ./test/integration-tests/...
+	go test -p 1 -count=1 -race -tags=mock_solana,mock_postmark,mock_appstore,mock_nft_marketplace,mock_google_firebase ./test/integration-tests/...
