--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Go
 
 on:
   push:
-    branches: [main, develop, SAT-769-tx-watcher]
+    branches: [main, develop]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [main, develop]
