--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: Go
 
 on:
-  push:
-    branches: [main, develop]
+  # push:
+  #   branches: [main, develop]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [main, develop]
